--- a/examples/sfu-videochat/app/src/main/res/layout/view_remote.xml
+++ b/examples/sfu-videochat/app/src/main/res/layout/view_remote.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
@@ -33,4 +33,4 @@
             app:layout_constraintVertical_bias="0.0" app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_bias="0.515"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
